# aoc2022

./: .gitignore  LICENSE  aoc2022.cabal
bench/: Bench.hs
inputs/: Day_11.txt  Day_24.txt
profiling/: Profiling.hs
src/: Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day1_2021.hs  Day2.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  Days.hs  Utils.hs
test/: Main.hs
tests/: Test.hs  test.hs
