cabal-version:      3.0
name:               aoc2022

-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            0.1.0.0
synopsis:           Advent of Code 2022
license:            MIT
license-file:       LICENSE
author:             CrumbsTrace
maintainer:         45168144+CrumbsTrace@users.noreply.github.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings

    exposed-modules:  Utils
                    , Days

    other-modules:
        Day1, Day2, Day3, Day4, Day5,
        Day6, Day7, Day8, Day9, Day10,
        Day11, Day12, Day13, Day14, Day15,
        Day16, Day17, Day18, Day19, Day20,
        Day21, Day22, Day23, Day24, Day25,
        Day1_2021,

    ghc-options: -O2 
                 -funfolding-use-threshold=16
                 -optc-O3

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    build-depends:    base ^>=4.17.0.0,
                      bytestring,
                      attoparsec

    hs-source-dirs:   src
    default-language: GHC2021

test-suite test
    default-language:
        GHC2021
    type:
        exitcode-stdio-1.0
    hs-source-dirs:
        tests
    main-is:
        Test.hs

    build-depends:
        base ^>=4.17.0.0,
        aoc2022,
        bytestring,
        tasty,
        tasty-hunit,
        HUnit

benchmark bench-days
    default-language: GHC2021

    build-depends: 
        base ^>=4.17.0.0,
        aoc2022,
        criterion,
        bytestring
    
    ghc-options: 
        -O2
        -optc-O3
        -funfolding-use-threshold=16

    hs-source-dirs: bench
    main-is: Bench.hs
    type: exitcode-stdio-1.0

