cabal-version:   3.0
name:            aoc2022
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
maintainer:      45168144+CrumbsTrace@users.noreply.github.com
author:          CrumbsTrace
synopsis:        Advent of Code 2022
build-type:      Simple
extra-doc-files: CHANGELOG.md

library
    exposed-modules:
        Utils
        Days

    hs-source-dirs:   src
    other-modules:
        Day1
        Day2
        Day3
        Day4
        Day5
        Day6
        Day7
        Day8
        Day9
        Day10
        Day11
        Day12
        Day13
        Day14
        Day15
        Day16
        Day17
        Day18
        Day19
        Day20
        Day21
        Day22
        Day23
        Day24
        Day25
        Day1_2021

    default-language: GHC2021
    ghc-options:      -Wall -O2 -optc-O3 
    build-depends:
        base >=4.16.0.0,
        bytestring,
        attoparsec,
        containers

test-suite test
    type:             exitcode-stdio-1.0
    main-is:          Test.hs
    hs-source-dirs:   tests
    default-language: GHC2021
    build-depends:
        base >=4.16.0.0,
        aoc2022,
        bytestring,
        tasty,
        tasty-hunit,
        HUnit

benchmark bench-days
    type:             exitcode-stdio-1.0
    main-is:          Bench.hs
    hs-source-dirs:   bench
    default-language: GHC2021
    build-depends:
        base >=4.16.0.0,
        aoc2022,
        criterion,
        bytestring
